syntax = "proto3";
import "google/protobuf/empty.proto";
package rg2g;
option cc_generic_services = true;

service Rg2gService {
  rpc EnterRoom (google.protobuf.Empty) returns (google.protobuf.Empty);
}